# rumpy

./: Cargo.toml  README.md
py-src/: _datetime.py  _iter.py  _linalg_wrap.py  _top_extras.py  char.py  compat.py  core.py  ctypeslib.py  doc.py  dtypes.py  emath.py  exceptions.py  f2py.py  index_helpers.py  lib.py  lib_stride_tricks.py  ma.py  matlib.py  matrixlib.py  polynomial.py  rec.py  scalars.py  strings.py  testing.py  typing.py  version.py
src/: convert.rs  create.rs  dtype.rs  einsum.rs  extras.rs  extras2.rs  fft.rs  fmt.rs  index.rs  internal.rs  lib.rs  linalg.rs  linalg_extra.rs  more_ops.rs  npy.rs  npz.rs  ops.rs  poly.rs  promote.rs  random.rs  reduce.rs  textio.rs
tests/: api_coverage.rs  bug_hunt.rs  compare_numpy.rs  dtype_extensions.rs  dtypes.rs  extra_compare.rs  extras.rs  finale.rs  indexing.rs  linalg_faer.rs  more.rs  niche.rs  perf.rs  round2_edges.rs  rust_api.rs  saveload.rs  scalars.rs  string_dtype.rs  typing.rs
