[package]
name = "rumpy"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
repository = "https://github.com/oh-yes-0-fps/rumpy"
description = "A reimplementation of NumPy for use with rustpython in embedded interpreters"

[features]
default = []
safe-locks = ["rustpython-vm/threading"]
no-panic = ["dep:no-panic"]

stdlib = [
    "dep:rustpython-stdlib",
    "dep:rustpython-pylib",
    "rustpython-pylib/freeze-stdlib",
]

[dependencies]
ndarray = "0.17.2"
faer = { version = "0.24", default-features = false, features = ["std", "linalg"] }
rustpython-vm = { version = "0.5.0", default-features = false, features = ["compiler"] }
rustpython-stdlib = { version = "0.5.0", default-features = false, features = ["compiler"], optional = true }
rustpython-pylib = { version = "0.5.0", default-features = false, optional = true }
num-traits = "0.2"
num-complex = "0.4"
half = { version = "2", features = ["num-traits"] }
rustfft = "6.4"
no-panic = { version = "0.1.36", optional = true }
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng"] }
rand_distr = { version = "0.6", default-features = false, features = ["std_math"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
numpy = "0.28"
approx = "0.5"
rustpython-vm = { version = "0.5.0", default-features = false, features = ["compiler", "stdio"] }
